added divs with class's centered button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>DO NOT PRESS THE BUTTON</h1>
+    <div class="container">
+        <div class="center">
+    <button onclick=“alert(‘Boom!’);”>Click Me :)</button>
+         </div>
+    </div>
+
     
 </body>
 </html>
