--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>DO NOT PRESS THE BUTTON</h1>
     <div class="container">
         <div class="center">
-    <button onclick=“alert(‘Boom!’);”>Click Me :)</button>
+    <button onclick="alert('Boom!')";>Click Me :)</button>
          </div>
     </div>
 
