added alert in .js

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <h1>DO NOT PRESS THE BUTTON</h1>
+    <script src="dont.js"></script>
     <div class="container">
         <div class="center">
     <button onclick="alert('Boom!')";>Click Me :)</button>
          </div>
     </div>
-
-    
+    <script> console.log("Whatever you do dont push the button");</script>
 </body>
 </html>
